2011-09-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amcryptsimple.pl: Do not use gpg-agent if it is not
	  available.
		  
2011-09-02  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c (print_platform): Another fix.

2011-09-02  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amcryptsimple.pl: Use gpg-agent.

2011-09-02  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c (print_platform): Fix.

2011-09-01  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c (export) parse version without patch number.

2011-09-01  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/ScanInventory.pm: Get the meta label before
	  calling make_new_tape_label.
	* perl/Amanda/Taper/Scan/traditional.pm: Get the meta label before
	  calling make_new_tape_label.
	* perl/Amanda/Taper/Scribe.pm: Return the reservation on error.
	* server-src/amcheck-device.pl: Release the reservation on error.
	* server-src/amtape.pl: Release the reservation on error,
	  change 'amtape taper' output to be the same as amcheck.
	* installcheck/amtape.pl: Fix for new amtape output.

2011-08-31  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/debug.c (debug_printf): Print a thread id.
	* device-src/xfer-dest-taper-cacher.c,
	  device-src/xfer-dest-taper-directtcp.c,
	  device-src/xfer-dest-taper-splitter.c,
	  device-src/xfer-source-recovery.c,
	  server-src/xfer-dest-holding.c: Remove printing of thread id.

2011-08-31  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: filter stderr make result strange,
			       filter exit_code != 0 make it fail.


2011-08-31  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Do not rename gnutar-list if record is not
	  set.

2011-08-31  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/tapefile.h (struct tape_s): Add blocksize.
	* server-src/tapefile.c: Print and parse blocksize in tapelist file.