@@ -1,3 +1,6 @@
+2011-09-07  Jean-Louis Martineau <martineau@zmanda.com>
+	* application-src/amzfs-sendrecv.pl: restore works without --device.
+
 2011-09-06  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/amcryptsimple.pl: Do not use gpg-agent if it is not
 	  available.
